--- a/public/styles.css
+++ b/public/styles.css
@@ -42,3 +42,44 @@ button {
   width: 31.5%;
   font-size: 1em;
 }
+
+section {
+  padding: 3em;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: start;
+  vertical-align: top;
+}
+
+article {
+  position: relative;
+  width: 400px;
+  margin: 2em auto;
+  padding: 0;
+}
+
+h3 {
+  font-size: 2em;
+  text-align: center;
+  color:  #757575;
+}
+
+img {
+  text-align: center;
+  margin: auto;
+  width: 400px;
+  height: 400px;
+}
+
+.delete {
+  position: absolute;
+  bottom: 3%;
+  right: 2%;
+  width: 60px;
+  height: 60px;
+  background-image: url('./download.jpeg');
+  background-size: cover;
+  background-position: center;
+}
