--- a/public/styles.css
+++ b/public/styles.css
@@ -84,6 +84,10 @@ img {
   background-position: center;
 }
 
+.delete:hover {
+  background-color: #757575;
+}
+
 .add_photos:disabled {
   background-color: #757575;
   color: #fff;
